data/derived/fa15/progs/unify/prog2886.ml.out
Characters 34-51:
  let stringOfList f l = List.map f (sepConcat ";" l);;
                                    ^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         'a list
